Fixed whitespace beneath footer on large resolutions.

--- a/esljobmap/static/foundation/scss/module/_proprietary.scss
+++ b/esljobmap/static/foundation/scss/module/_proprietary.scss
@@ -14,6 +14,10 @@
     @include breakpoint(medium down) {
         min-height: 100vh;
     }
+
+    @include breakpoint(large up) {
+        min-height: 93vh;
+    }
 }
 
 .bold-text {
